ラーメン屋を保存可能に
